[package]
name = "your-bourse-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

service-sdk = { git = "https://github.com/MyJetTools/service-sdk.git", tag = "0.2.5", features = [
    "macros",
    "my-nosql-data-reader-sdk",
    "my-nosql-data-writer-sdk",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-tcp-sockets = { tag = "0.1.9", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
rust-fix = { tag = "0.1.1", git = "https://github.com/MyJetTools/rust-fix.git" }

my-nosql-contracts = { tag = "0.1.37", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git", features = [
    "price-src",
] }

prices-tcp-contracts = { tag = "0.1.3", git = "https://github.com/my-cfd-platform/prices-tcp-contracts" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde_yaml = "*"
uuid = { version = "*", features = ["v4"] }
chrono = "*"
